addProduct, getAllProducts